Fix language nav selector - right text align

--- a/assets/scss/rtl/partials/_nav.scss
+++ b/assets/scss/rtl/partials/_nav.scss
@@ -36,6 +36,7 @@
 
     .dropdown {
         .dropdown-content {
+            text-align: right;
             padding: 30px 12px 35px 30px;
         }
     }
