--- a/assets/scss/rtl/partials/modals/_modal-search-offices.scss
+++ b/assets/scss/rtl/partials/modals/_modal-search-offices.scss
@@ -13,6 +13,9 @@
                 }
 
                 .inputs {
+                    padding-left: 15px;
+
+
                     .search-select-group {
                         &:not(:last-child) {
                             margin-left: 30px;
@@ -27,6 +30,7 @@
 
             .btn-back {
                 display: flex;
+                padding-right: 15px;
                 justify-content: flex-end;
                 flex-direction: row-reverse;
             }
